--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ngrx/router-store": "^8.0.1",
     "@ngrx/store": "^8.0.1",
     "@ngrx/store-devtools": "^8.0.1",
+    "ngrx-store-logger": "^0.2.3",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
